Bugfix
Post content went out of screen if there were no spaces used. Added word-wrap to the post.

--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,7 @@ Modules style
     margin: 0;
     border: 1px solid #dedede;
     border-radius: 0.2em;
+    word-wrap: anywhere;
 }
 
 .post__title {
